error Cycles X when trying to render images with volumetric and shadow catcher object #91733

Closed
opened 2021-09-26 22:10:33 +02:00 by john ford · 16 comments

System Information
Operating system: windows 10
Graphics card: RTX 3080

Blender Version
Broken: Blender 3.0 Cycles X
Worked: it works on regular 3.0
i ve a scene with some objects set as shadow catcher, i can render it without volumetric but as soon as put a domain with volumetric i get an error in viewport and render
note that if i disable either volumetric or shadow catcher object it render normally but not both.

Exact steps for others to reproduce the error
shadow catcher plane with an object that cast shadow and some smoke domain in cycles X

**System Information** Operating system: windows 10 Graphics card: RTX 3080 **Blender Version** Broken: Blender 3.0 Cycles X Worked: it works on regular 3.0 i ve a scene with some objects set as shadow catcher, i can render it without volumetric but as soon as put a domain with volumetric i get an error in viewport and render note that if i disable either volumetric or shadow catcher object it render normally but not both. **Exact steps for others to reproduce the error** shadow catcher plane with an object that cast shadow and some smoke domain in cycles X
Author

Added subscriber: @quentin-ford

Added subscriber: @quentin-ford
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I'm personally able to reproduce an error following these steps:

  1. Create an object and give it the Quick Smoke effect (Select from the top of the viewport Object -> Quick Effects -> Quick Smoke)
  2. Select the domain for the simulation and enable the Shadow Catcher option
  3. Enter the rendered viewport mode with GPU rendering (CUDA or OptiX). An error should appear.

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender version: 3.0.0 Alpha, branch: master, commit date: 2021-09-26 21:28, hash: d046a1f2fa

I'm personally able to reproduce an error following these steps: 1. Create an object and give it the `Quick Smoke` effect (Select from the top of the viewport `Object -> Quick Effects -> Quick Smoke`) 2. Select the domain for the simulation and enable the `Shadow Catcher` option 3. Enter the rendered viewport mode with GPU rendering (CUDA or OptiX). An error should appear. **System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 Blender version: 3.0.0 Alpha, branch: master, commit date: 2021-09-26 21:28, hash: `d046a1f2fa`
Author

error2_pack.blend i ve simplified my scene but if i zoom in the viewport or render i get an error

[error2_pack.blend](https://archive.blender.org/developer/F10629251/error2_pack.blend) i ve simplified my scene but if i zoom in the viewport or render i get an error

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke

Worth noting that doing this with CPU rendering will crash Blender entirely

Worth noting that doing this with CPU rendering will crash Blender entirely
Author

I ve just checked quick , looks like it works now !

Well done Cycles developper guys you re awesome !

I ve just checked quick , looks like it works now ! Well done Cycles developper guys you re awesome !
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
William Leeson self-assigned this 2021-10-26 12:58:18 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

This was not solved, D12674: Fix #91733: Wrong shadow catcher with volumes is still being worked on.

This was not solved, [D12674: Fix #91733: Wrong shadow catcher with volumes](https://archive.blender.org/developer/D12674) is still being worked on.

This issue was referenced by blender/cycles@fd02817db3

This issue was referenced by blender/cycles@fd02817db3982dbd78de5bf77995bbd7f9132e8f

This issue was referenced by d1a9425a2f

This issue was referenced by d1a9425a2fde32b6786b333ab55661da507e818b
William Leeson was unassigned by Brecht Van Lommel 2021-11-03 20:37:37 +01:00

Added subscriber: @leesonw

Added subscriber: @leesonw

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-11-05 21:03:01 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91733
No description provided.